<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NoteAddFragment"
    tools:layout_editor_absoluteX="-33dp"
    tools:layout_editor_absoluteY="-26dp">

    <EditText
        android:id="@+id/add_notetitle_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/note_title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/add_notedescription_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_notetitle_et"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/save_note_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_note_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_notedescription_et"
        app:layout_constraintVertical_bias="0.896" />

    <Button
        android:id="@+id/cancel_note_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_note_btn"
        app:layout_constraintTop_toBottomOf="@+id/add_notedescription_et"
        app:layout_constraintVertical_bias="0.896" />
</androidx.constraintlayout.widget.ConstraintLayout>